--- a/Lab2/src/app/com2/com2.component.html
+++ b/Lab2/src/app/com2/com2.component.html
@@ -1,1 +1,20 @@
-<p>com2 works!</p>
+<div class="second">
+    <div class="main-container">
+        <div class="container-left">
+            <div class="text-container-1">
+                <h2 class="title-1">Total Earnings</h2>
+                <h2 class="price-1">$39K</h2>
+                <h3 class="percentages-1"> ⇣ 13.8%</h3>
+            </div>
+            <img class="chart-1" src="../../assets/line-chart.png" alt="">
+        </div>
+        <div class="container-right">
+            <div class="text-container-2">
+                <h2 class="title-2">Products Sold</h2>
+                <h2 class="price-2"> 2453</h2>
+                <h3 class="percentages-2">⇡ 13.8%</h3>
+            </div>
+            <img class="chart-2" src="../../assets/line-chart.png" alt="">
+        </div>
+    </div>
+</div>
