--- a/Lab2/src/app/com1/com1.component.html
+++ b/Lab2/src/app/com1/com1.component.html
@@ -2,12 +2,18 @@
 <div class="main-container">
     <div class="container-left">
         <img class="img1" src="../../assets/piggy-bank.png" alt="">
-        <h2>$50,000</h2>
-        <h3>Total Revenue</h3>
+        <div class="text-container-1">
+            <h2 class="price-1">$50,000</h2>
+            <h2 class="text">Total Revenue</h2>
+        </div>
+        <h2 class="dot">...</h2>
     </div>
     <div class="container-right">
         <img class="img2" src="../../assets/add-to-cart.png" alt="">
-        <h2>$1,250</h2>
-        <h3>Revenue</h3>
+        <div class="text-container-2">
+            <h2 class="price-2">$1,250</h2>
+            <h2 class="text">Revenue</h2>
+        </div>
+        <h2 class="dot">...</h2>
     </div>
 </div>
