--- a/Lab2/src/app/com1/com1.component.scss
+++ b/Lab2/src/app/com1/com1.component.scss
@@ -1,38 +1,76 @@
-:host {
+// :host {
+//   display: flex;
+//   justify-content: space-between;
+// }
+
+.main-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .container-left {
-  border: solid black 1px;
-  width: 20em;
   display: flex;
-  justify-content: space-between;
+  border: solid black 1px;
+  box-shadow: 5px 5px;
   padding: 0 10px;
+  height: 100%;
+  width: 450px;
 }
 
 .img1 {
   width: 35px;
   height: 35px;
   margin: auto 0px;
-  border: 1px black solid;
+  border: 5px green solid;
   border-radius: 50px;
   padding: 5px;
+  margin-right: 50px;
 }
 
 .container-right {
-  border: solid black 1px;
-  width: 20em;
   display: flex;
-  justify-content: space-between;
+  border: solid black 1px;
+  box-shadow: 5px 5px;
   padding: 0 10px;
+  height: 100%;
+  width: 450px;
 }
 
 .img2 {
   width: 35px;
   height: 35px;
   margin: auto 0px;
-  border: 1px black solid;
+  border: 5px purple solid;
   border-radius: 50px;
   padding: 5px;
+  margin-right: 50px;
+}
+
+.text-container-2 {
+  margin-right: 260px;
+}
+
+.text-container-1 {
+  margin-right: 220px;
+}
+
+.dot {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 30px;
+  color: grey;
+}
+
+.price-1 {
+  font-size: 20px;
+  color: green;
+}
+
+.price-2 {
+  font-size: 20px;
+  color: purple;
+}
+
+.text {
+  font-size: 15px;
 }
