--- a/Lab2/src/styles.scss
+++ b/Lab2/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  background-color: #ecf0f1;
+}
+
+.main-title {
+  display: flex;
+  justify-content: center;
+  -webkit-box-shadow: 0px 0px 16px 3px rgba(146, 146, 146, 0.62);
+  -moz-box-shadow: 0px 0px 16px 3px rgba(146, 146, 146, 0.62);
+  box-shadow: 0px 0px 16px 3px rgba(146, 146, 146, 0.62);
+  border-radius: 2rem;
+  color: #9b59b6;
+  padding: auto 0px;
+  width: 250px;
+  height: auto;
+  margin-top: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 13px;
+}
