ProjectList: create/read/delete - done (edit in progress)

--- a/ProjektZaliczeniowy/src/app/navbar/navbar.component.html
+++ b/ProjektZaliczeniowy/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<div class="">
-    <button class="" routerLink="">HOME</button>
-    <button class="" routerLink="/lista-projektów">Lista projektów</button>
-    <button class="" routerLink="/lista-detali">Lista detali</button>
+<div class="border">
+    <button class="click" routerLink="">HOME</button>
+    <button class="click" routerLink="/lista-projektów">Lista projektów</button>
+    <button class="click" routerLink="/lista-detali">Lista detali</button>
 </div>
